--- a/syllabus/syllabuspre.tex
+++ b/syllabus/syllabuspre.tex
@@ -90,7 +90,7 @@
    {\begin{center}
      \begin{center}
      \bf
-     CMPSC 112\\Introduction to Computer Science II\\
+     CMPSC 440\\Operating Systems\\
      Spring 2014\\
      \medskip
      \end{center}
@@ -107,7 +107,7 @@
     %\immediate\write16{}
     %\immediate\write16{DATE OF HANDOUT?}
     %\read16 to \dateofhandout
-    \def \dateofhandout {January 13, 2014}
+    \def \dateofhandout {January 14, 2014}
     \lfoot{\sc Handed out on \dateofhandout}
     %\immediate\write16{}
     %\immediate\write16{HANDOUT NUMBER?}
