Finished modifying the content up to, but not including the catalog description.

--- a/syllabus/cs440S2014-syllabus.tex
+++ b/syllabus/cs440S2014-syllabus.tex
@@ -29,14 +29,14 @@ Dr.\ Gregory M.\ Kapfhammer\\
 \noindent 
 To schedule a meeting with me during my office hours, please visit my Web site and click the ``Schedule'' link
 in the top right-hand corner. Now, you can browse my office hours or schedule an appointment by clicking the correct
-link and then reserving an open time slot. From 3:30 -- 4:30 pm on Mondays, I will also be available for walk-in
+link and then reserving an open time slot. From 3:30 -- 4:30 pm on Tuesdays, I will also be available for walk-in
 technical consultations in Alden Hall 101.  
 
 \subsection*{Course Meeting Schedule}
 
-Lecture, Discussion, and Group Work: Monday, Wednesday, Friday, 11:00 am -- 11:50 am\\
-Laboratory Session: Tuesday, 2:30 pm -- 4:20 pm \\
-Final Examination: Tuesday, May 6, 2014 at 9:00 am
+Lecture, Discussion, and Group Work: Tuesday, Thursday, 11:00 am -- 12:15 pm\\
+Laboratory Session: Monday, 2:30 pm -- 4:20 pm \\
+Final Examination: Thursday, May 1, 2014 at 7:00 pm
 
 \subsection*{Course Catalogue Description}
 
