--- a/syllabus/cs440S2014-syllabus.tex
+++ b/syllabus/cs440S2014-syllabus.tex
@@ -42,23 +42,21 @@ Final Examination: Thursday, May 1, 2014 at 7:00 pm
 
 \begin{quote}
 
-A continuation of Computer Science 111 with an emphasis on data structures, data abstraction, algorithm design, the
-analytical and experimental evaluation of algorithm performance, and object-oriented design and implementation
-techniques. Topics include stacks, queues, deques, lists, strings, trees and graphs, dictionaries, recursion, searching
-and sorting algorithms, and an introduction to program verification. May serve as the laboratory course in the Natural
-Science Division’s distribution requirement. One laboratory per week.  Prerequisite: Computer Science 111 or permission
-of the instructor.
+A study of operating systems and their design and implementation. Topics include the evolution of modern computer
+operating systems, basic components of an operating system, and hardware issues of importance to operating system design
+and implementation. Consideration is given to processes and threads, resource (processor, memory, device, and software)
+management, process and device scheduling, deadlocks, input/output, file systems, and system security. A representative
+operating system is examined in detail. One laboratory per week. Prerequisite: Computer Science 210. 
 
 \end{quote}
 
 \subsection*{Course Objectives}
 
 The process of implementing and evaluating correct and efficient software involves the application of many interesting
-theories, tools, techniques, and methodologies.  In this class, students will learn how to design, implement, and
-analyze algorithms and data structures in an object-oriented programming language. Students will learn more about
-fundamental concepts such as recursion, searching, and sorting while also discovering how to analytically and
-empirically evaluate the performance of computer programs. Students will also investigate both the use and
-implementation of data structures such as stacks, queues, deques, lists, strings, trees and graphs, and dictionaries.
+theories, tools, techniques, and methodologies.  In this class, 
+
+
+
 Moreover, students will enhance their ability to write and present their ideas about software in a clear, concise, and
 compelling fashion.  Students also will gain practical experience in the design, implementation, and analysis of
 software during laboratory sessions and a final project. Finally, students will develop a richer understanding of the
