Added in the listing of the ten learning objectives; reordered from before.

--- a/syllabus/cs440S2014-syllabus.tex
+++ b/syllabus/cs440S2014-syllabus.tex
@@ -52,10 +52,34 @@ operating system is examined in detail. One laboratory per week. Prerequisite: C
 
 \subsection*{Course Objectives}
 
-The process of implementing and evaluating correct and efficient software involves the application of many interesting
-theories, tools, techniques, and methodologies.  In this class, 
+The design, implementation, and use of operating systems involves the application of many interesting
+theories, techniques, and methodologies, and tools.  This course has the objective to: 
 
+\begin{enumerate}
 
+  \itemsep -.05in
+
+  \item Provide an overview of the nature and functions of operating systems.
+
+  \item Study the relationship between computer hardware and operating systems.
+  
+  \item Enhance the understanding of the services that operating systems provide to users.
+
+  \item Explore fundamental operating system concepts (e.g., processes, address spaces, and files). 
+
+  \item Study the algorithms in operating systems (e.g., memory management and scheduling).
+
+  \item Examine, in detail, the design of important modules in an operating system.
+
+  \item Develop a ``big picture'' understanding the overall design of an operating system.
+
+  \item Provide an introduction to multiprocessors and distributed systems.
+
+  \item Develop a basic understanding of security and protection issues in operating systems.
+
+  \item To enhance knowledge of the Linux operating system and its associated tools.
+
+\end{enumerate}
 
 Moreover, students will enhance their ability to write and present their ideas about software in a clear, concise, and
 compelling fashion.  Students also will gain practical experience in the design, implementation, and analysis of
