--- a/syllabus/cs440S2014-syllabus.tex
+++ b/syllabus/cs440S2014-syllabus.tex
@@ -81,11 +81,11 @@ theories, techniques, and methodologies, and tools.  This course has the objecti
 
 \end{enumerate}
 
-Moreover, students will enhance their ability to write and present their ideas about software in a clear, concise, and
-compelling fashion.  Students also will gain practical experience in the design, implementation, and analysis of
-software during laboratory sessions and a final project. Finally, students will develop a richer understanding of the
-fascinating connections between computer science and other disciplines in the social and natural sciences and the
-humanities.
+\vspace*{-.2in} \noindent Throughout the semester students also will enhance their ability to write and present ideas
+about operating systems in a clear and compelling fashion.  Students will gain practical experience in
+the design, implementation, and analysis of operating systems during laboratory sessions and a final project. Finally,
+students will develop a richer understanding of the fascinating connections between operating systems and other
+disciplines in the social and natural sciences and the humanities.
 
 \subsection*{Performance Objectives}
 
