Removed the performance objectives from the syllabus, not sure what to put there.

--- a/syllabus/cs440S2014-syllabus.tex
+++ b/syllabus/cs440S2014-syllabus.tex
@@ -81,23 +81,16 @@ theories, techniques, and methodologies, and tools.  This course has the objecti
 
 \end{enumerate}
 
-\vspace*{-.2in} \noindent Throughout the semester students also will enhance their ability to write and present ideas
+\vspace*{-.2in} 
+\noindent 
+Throughout the semester students also will enhance their ability to write and present ideas
 about operating systems in a clear and compelling fashion.  Students will gain practical experience in
 the design, implementation, and analysis of operating systems during laboratory sessions and a final project. Finally,
 students will develop a richer understanding of the fascinating connections between operating systems and other
 disciplines in the social and natural sciences and the humanities.
 
-\subsection*{Performance Objectives}
+% \subsection*{Performance Objectives}
 
-At the completion of this semester, the student should be comfortable with the object-oriented programming paradigm.
-Also, students should be able to handle many of the important, yet accidental, aspects of implementing programs in the
-Java programming language.  That is, students should be comfortable with the use of Vim as an integrated development
-environment and understand both the purpose and use of shell environment variables such as the {\tt CLASSPATH}.
-Students should have a toolkit of abstract data types that they can use to respond to the challenges they encounter
-during the development and analysis of software.  Students must have a strong grasp of the basic components of an
-object-oriented programming language and an ever-deepening knowledge of topics like recursion, searching, and sorting.
-Finally, students should have an elementary knowledge of the analytical and empirical techniques that they can use to
-measure algorithm performance.
 
 \subsection*{Required Textbook}
 
