Added in the text book information.

--- a/syllabus/cs440S2014-syllabus.tex
+++ b/syllabus/cs440S2014-syllabus.tex
@@ -91,12 +91,11 @@ disciplines in the social and natural sciences and the humanities.
 
 % \subsection*{Performance Objectives}
 
-
 \subsection*{Required Textbook}
 
-\noindent{\em Data Structures and Algorithms in Java}. Michael T.\ Goodrich and Roberto Tamassia.
-Fourth Edition, ISBN: 0-471-73884-0, 720 pages, 2006. \\
-(References to the textbook are abbreviated as ``DSAJ'' in the syllabus and on the Web site).
+\noindent{\em Modern Operating Systems}. Andrew S.\ Tanenbaum.
+Third Edition, ISBN-10: 0136006639, 1104 pages, 2007. \\
+(References to the textbook are abbreviated as ``MOS'' in the syllabus and on the Web site).
 
 \noindent
 Students who want to improve their technical writing skills may consult the following books.
