Fixed the text book listing.

--- a/syllabus/cs440S2014-syllabus.tex
+++ b/syllabus/cs440S2014-syllabus.tex
@@ -94,7 +94,7 @@ disciplines in the social and natural sciences and the humanities.
 \subsection*{Required Textbook}
 
 \noindent{\em Modern Operating Systems}. Andrew S.\ Tanenbaum.
-Third Edition, ISBN-10: 0136006639, 1104 pages, 2007. \\
+Third Edition, ISBN-10: 0136006639, ISBN-13: 978-0136006633, 1104 pages, 2007. \\
 (References to the textbook are abbreviated as ``MOS'' in the syllabus and on the Web site).
 
 \noindent
