Moved the grading categories sentence to the next page.

--- a/syllabus/cs440S2014-syllabus.tex
+++ b/syllabus/cs440S2014-syllabus.tex
@@ -129,7 +129,8 @@ academic semester.
   \end{tabular}
 \end{center}
 
-\vspace*{-.1in}
+% \vspace*{-.1in}
+\newpage
 \noindent
 These grading categories have the following definitions:
 \vspace*{-.1in}
