--- a/syllabus/cs440S2014-syllabus.tex
+++ b/syllabus/cs440S2014-syllabus.tex
@@ -157,17 +157,17 @@ These grading categories have the following definitions:
 	  at the date and time stated on the first page of the syllabus.
 
 	\item {\em Laboratory Assignments}: These assignments invite students to explore different techniques for
-	  designing, implementing, evaluating, and documenting software solutions to challenging problems that often
-	  have a connection to real-world concerns.  Many of the assignments will require students to conduct
-	  experiments and collect, analyze, and write about data sets.  To best ensure that students are ready to
-	  develop software in both other classes at Allegheny College and after graduation, students will complete
-	  assignments either on an individual basis or in teams.  When teamwork is required, the instructor will assign
-	  individuals to teams.
+	  designing, implementing, evaluating, and documenting software solutions to challenging problems in the field
+	  of operating systems.  Many of the assignments will require students to write programs, conduct experiments,
+	  and collect, analyze, and write about data sets.  To best ensure that students are ready to develop software
+	  in both other classes at Allegheny College and after graduation, students will complete assignments either on
+	  an individual basis or in teams.  When teamwork is required, the instructor will assign individuals to teams.
 	
-	\item {\em Final Project}: This project will present you with the description of a problem and ask you to design
-	  and implement a correct and carefully evaluated solution. Completion of the final project will require you to
-	  apply all of the knowledge and skills that you have accumulated during the course of the semester to solve a
-	  problem and, whenever possible, make your solution and results publicly available in a free and open fashion.
+	\item {\em Final Project}: This project will present you with the description of an operating systems problem
+	  and ask you to design and implement a correct and carefully evaluated solution. Completion of the final
+	  project will require you to apply all of the knowledge and skills that you have accumulated during the course
+	  of the semester to solve a problem and, whenever possible, make your solution and results publicly available
+	  in a free and open fashion.
 		
 \end{itemize}
 
