Added a draft of the content about the use of lab facilities.

--- a/syllabus/cs440S2014-syllabus.tex
+++ b/syllabus/cs440S2014-syllabus.tex
@@ -202,10 +202,10 @@ the course.
 \subsubsection*{Use of Laboratory Facilities}
 
 Throughout the semester, we will experiment with many different software tools that computer scientists use during the
-design, implementation, and evaluation of algorithms and data structures.  The course instructor and the department's
-systems administrator have invested a considerable amount of time to ensure that our laboratories support the completion
-of both the laboratory assignments and the final project.  To this end, students are required to complete all
-assignments and the final project while using the department's laboratory facilities. The course instructor and the
+design, implementation, evaluation, and interaction with operating systems.  The course instructor and the
+department's systems administrator have invested a considerable amount of time to ensure that our laboratories support
+the completion of both the laboratory assignments and the final project.  To this end, students are required to complete
+all assignments and the final project while using the department's laboratory facilities. The course instructor and the
 systems administrator normally do not assist students in configuring their personal computers.
 
 \subsubsection*{Class Preparation}
