--- a/syllabus/cs440S2014-syllabus.tex
+++ b/syllabus/cs440S2014-syllabus.tex
@@ -236,7 +236,7 @@ and to ensure that you can reliably send and receive emails. This class policy i
 {\em The Compass}, the college's student handbook.
 
 % \vspace*{-.1in}
-\newpage
+% \newpage
 \begin{quote}
 ``The use of email is a primary method of communication on campus. \ldots
 All students are provided with a campus email account and address while
