Finished the first draft of the adventure in operating systems.

--- a/syllabus/cs440S2014-syllabus.tex
+++ b/syllabus/cs440S2014-syllabus.tex
@@ -276,13 +276,14 @@ with others, and the student who produces assignments that are identical to, or 
 work.  While it is acceptable for students in this class to discuss their programs, data sets, and reports with
 classmates, deliverables that are nearly identical to others will be taken as evidence of violating the Honor Code.
 
-\subsection*{Welcome to an Adventure in Computer Science}
+\subsection*{Welcome to an Adventure in Operating Systems}
 
 In reference to software, Frederick P.\ Brooks, Jr.\ wrote in chapter one of {\em The Mythical Man Month}, ``The magic
 of myth and legend has come true in our time.'' Software is a pervasive aspect of our society that changes how we think
-and act.  Efficient and correct software also has the potential to positively influence the lives many of people.
-Moreover, the design, implementation, evaluation, and documentation of software are exciting and rewarding activities!
-At the start of this class, I invite you to pursue this adventure in algorithms and data structures with enthusiasm and
-vigor.
+and act. Moreover, the operating system is one of the crucial software components that enables people to interact with a
+wide range of servers, desktop workstations, and mobile and embedded devices.  As such, efficient and correct operating
+systems have the potential to positively influence the lives many of people.  Moreover, the design, implementation,
+evaluation, documentation, and use of operating are exciting and rewarding activities!  At the start of this class, I
+invite you to pursue this adventure operating systems with enthusiasm and vigor.
 
 \end{document}
