Fixed the two mistakes on the first page of the syllabus.

--- a/syllabus/cs440S2014-syllabus.tex
+++ b/syllabus/cs440S2014-syllabus.tex
@@ -29,7 +29,7 @@ Dr.\ Gregory M.\ Kapfhammer\\
 \noindent 
 To schedule a meeting with me during my office hours, please visit my Web site and click the ``Schedule'' link
 in the top right-hand corner. Now, you can browse my office hours or schedule an appointment by clicking the correct
-link and then reserving an open time slot. From 3:30 -- 4:30 pm on Tuesdays, I will also be available for walk-in
+link and then reserving an open time slot. From 3:30 -- 4:30 pm on Tuesdays, I also will be available for walk-in
 technical consultations in Alden Hall 101.  
 
 \subsection*{Course Meeting Schedule}
@@ -53,7 +53,7 @@ operating system is examined in detail. One laboratory per week. Prerequisite: C
 \subsection*{Course Objectives}
 
 The design, implementation, and use of operating systems involves the application of many interesting
-theories, techniques, and methodologies, and tools.  This course has the objective to: 
+theories, techniques, methodologies, and tools.  This course has the objective to: 
 
 \begin{enumerate}
 
