Fixed the spacing on the second page so that space utils much better.

--- a/syllabus/cs440S2014-syllabus.tex
+++ b/syllabus/cs440S2014-syllabus.tex
@@ -57,7 +57,7 @@ theories, techniques, methodologies, and tools.  This course has the objective t
 
 \begin{enumerate}
 
-  \itemsep -.05in
+  \itemsep 0in
 
   \item Provide an overview of the nature and functions of operating systems.
 
@@ -81,7 +81,7 @@ theories, techniques, methodologies, and tools.  This course has the objective t
 
 \end{enumerate}
 
-\vspace*{-.2in} 
+\vspace*{-.075in} 
 \noindent 
 Throughout the semester students also will enhance their ability to write and present ideas
 about operating systems in a clear and compelling fashion.  Students will gain practical experience in
