Fixed all of the mistakes on the second apge of the syllabus.

--- a/syllabus/cs440S2014-syllabus.tex
+++ b/syllabus/cs440S2014-syllabus.tex
@@ -69,15 +69,15 @@ theories, techniques, methodologies, and tools.  This course has the objective t
 
   \item Study the algorithms in operating systems (e.g., memory management and scheduling).
 
-  \item Examine, in detail, the design of important modules in an operating system.
+  \item Examine, in detail, the design of the important modules in an operating system.
 
-  \item Develop a ``big picture'' understanding the overall design of an operating system.
+  \item Develop a ``big picture'' understanding of the overall design of an operating system.
 
-  \item Provide an introduction to multiprocessors and distributed systems.
+  \item Provide an introduction to multi-processor systems and distributed systems.
 
   \item Develop a basic understanding of security and protection issues in operating systems.
 
-  \item To enhance knowledge of the Linux operating system and its associated tools.
+  \item Enhance knowledge of the Linux operating system and its associated tools.
 
 \end{enumerate}
 
@@ -95,7 +95,7 @@ disciplines in the social and natural sciences and the humanities.
 
 \noindent{\em Modern Operating Systems}. Andrew S.\ Tanenbaum.
 Third Edition, ISBN-10: 0136006639, ISBN-13: 978-0136006633, 1104 pages, 2007. \\
-(References to the textbook are abbreviated as ``MOS'' in the syllabus and on the Web site).
+(References to the textbook are abbreviated as ``MOS'' on the course Web site).
 
 \noindent
 Students who want to improve their technical writing skills may consult the following books.
@@ -141,7 +141,7 @@ These grading categories have the following definitions:
 	  during all of the class sessions. Your participation will take forms such as answering questions about the
 	  required reading assignments, asking constructive questions of your group members, giving presentations, and
 	  leading a discussion session. Furthermore, all students are required to meet with the course instructor during
-	  office hours for a total of thirty minutes during the Spring 2014 semester.  These meetings must be scheduled
+	  office hours for a total of thirty minutes throughout the Spring 2014 semester.  These meetings must be scheduled
 	  through the course instructor's reservation system and documented on a meeting record that you submit on the
 	  day of the final examination. A student will receive an interim and final grade for this category.
 
@@ -178,7 +178,7 @@ of the class on that due date; the printed materials must be dated and signed wi
 student(s) completing the work.  Late assignments will be accepted for up to one week past the assigned due date with a
 15\% penalty. All late assignments must be submitted at the beginning of the session that is scheduled one week after
 the due date. Unless special arrangements are made with the course instructor, no assignments will be accepted after the
-late deadline. For any assignment completed in a group, students must also turn in a one-page document that describes
+late deadline. For any assignment completed in a group, students also must turn in a one-page document that describes
 each group member's contribution to the submitted deliverables.  
 
 \subsubsection*{Attendance}
