Removed a comma that was not needed.

--- a/syllabus/cs440S2014-syllabus.tex
+++ b/syllabus/cs440S2014-syllabus.tex
@@ -272,7 +272,7 @@ integrity of both myself and the College community as a whole.
 \noindent It is recognized that an important part of the learning process in any course, and particularly one in
 computer science, derives from thoughtful discussions with teachers and fellow students.  Such dialogue is encouraged.
 However, it is necessary to distinguish carefully between the student who discusses the principles underlying a problem
-with others, and the student who produces assignments that are identical to, or merely variations on, someone else's
+with others and the student who produces assignments that are identical to, or merely variations on, someone else's
 work.  While it is acceptable for students in this class to discuss their programs, data sets, and reports with
 classmates, deliverables that are nearly identical to others will be taken as evidence of violating the Honor Code.
 
