Made the final changes in the syllabus for CMPSC 440 Spring 2014.

--- a/syllabus/cs440S2014-syllabus.tex
+++ b/syllabus/cs440S2014-syllabus.tex
@@ -217,7 +217,7 @@ systems administrator normally do not assist students in configuring their perso
 % despair!  Press on and persevere!
 % 
 
-In order to minimize confusion and maximize learning, students must invest time to prepare for class discussions and
+In order to minimize confusion and maximize learning, students must invest time to prepare for the class discussions and
 lectures.  During the class periods, the course instructor will often pose demanding questions that could require group
 discussion, the creation of a program or data set, a vote on a thought-provoking issue, or a group presentation.  Only
 students who have prepared for class by reading the assigned material and reviewing the current assignments will be able
@@ -225,15 +225,14 @@ to effectively participate in these discussions.  More importantly, only prepare
 knowledge and skills that are needed to be successful in both this course and the field of computer science.  In order
 to help students remain organized and effectively prepare for classes, the course instructor will maintain a class
 schedule with reading assignments and presentation slides.   During the class sessions students will also be required to
-download, use, and modify programs and data sets that are made available through the course Web site.  Students who are
-not comfortable with compiling, editing, and running Java programs should see the course instructor.
+download, use, and modify programs and data sets that are made available through the course Web site.  
 
 \subsubsection*{Email}
 
 Using your Allegheny College email address, I will sometimes send out class announcements about matters such as
 assignment clarifications or changes in the schedule. It is your responsibility to check your email at least once a day
 and to ensure that you can reliably send and receive emails. This class policy is based on the following statement in
-{\em The Compass}, the college's student handbook.
+{\em The Compass}, the College's student handbook.
 
 % \vspace*{-.1in}
 % \newpage
@@ -273,7 +272,7 @@ integrity of both myself and the College community as a whole.
 computer science, derives from thoughtful discussions with teachers and fellow students.  Such dialogue is encouraged.
 However, it is necessary to distinguish carefully between the student who discusses the principles underlying a problem
 with others and the student who produces assignments that are identical to, or merely variations on, someone else's
-work.  While it is acceptable for students in this class to discuss their programs, data sets, and reports with
+work.  While it is acceptable for students in this class to discuss their programs, data sets, and reports with their
 classmates, deliverables that are nearly identical to others will be taken as evidence of violating the Honor Code.
 
 \subsection*{Welcome to an Adventure in Operating Systems}
@@ -284,6 +283,6 @@ and act. Moreover, the operating system is one of the crucial software component
 wide range of servers, desktop workstations, and mobile and embedded devices.  As such, efficient and correct operating
 systems have the potential to positively influence the lives many of people.  Moreover, the design, implementation,
 evaluation, documentation, and use of operating are exciting and rewarding activities!  At the start of this class, I
-invite you to pursue this adventure operating systems with enthusiasm and vigor.
+invite you to pursue this adventure in operating systems with enthusiasm and vigor.
 
 \end{document}
