Patched a small writing mistake in the syllabus.

--- a/syllabus/cs440S2014-syllabus.tex
+++ b/syllabus/cs440S2014-syllabus.tex
@@ -273,7 +273,8 @@ computer science, derives from thoughtful discussions with teachers and fellow s
 However, it is necessary to distinguish carefully between the student who discusses the principles underlying a problem
 with others and the student who produces assignments that are identical to, or merely variations on, someone else's
 work.  While it is acceptable for students in this class to discuss their programs, data sets, and reports with their
-classmates, deliverables that are nearly identical to others will be taken as evidence of violating the Honor Code.
+classmates, deliverables that are nearly identical to the work of others will be taken as evidence of violating the
+\mbox{Honor Code}.
 
 \subsection*{Welcome to an Adventure in Operating Systems}
 
