Fixed the footer for the lab 1 assignment.

--- a/labs/lab1/labspre.tex
+++ b/labs/lab1/labspre.tex
@@ -90,8 +90,8 @@
    {\begin{center}
      \begin{center}
      \bf
-     CMPSC 290\\Principles of Software Development\\
-     Fall 2013
+     CMPSC 440\\Operating Systems\\
+     Spring 2014
      \medskip
      \end{center}
      \bf
@@ -107,7 +107,7 @@
     %\immediate\write16{}
     %\immediate\write16{DATE OF HANDOUT?}
     %\read16 to \dateofhandout
-    \def \dateofhandout {September 4, 2013}
+    \def \dateofhandout {January 27, 2014}
     \lfoot{\sc Handed out on \dateofhandout}
     %\immediate\write16{}
     %\immediate\write16{HANDOUT NUMBER?}
