Fixed the header in the main .tex file of the assignment.

--- a/labs/lab1/cs440S2014-lab1.tex
+++ b/labs/lab1/cs440S2014-lab1.tex
@@ -1,10 +1,12 @@
+%!TEX root=cs440S2014-lab1.tex
+% mainfile: cs440S2014-lab1.tex 
 \input{labspre.tex}
 
 \usepackage[compact]{titlesec}
 
 \begin{document}
-\MYTITLE{Laboratory Assignment One: Version Control with Git and Bitbucket}
-\MYHEADERS{Laboratory Assignment One}{Due: September 11, 2013}
+\MYTITLE{Laboratory Assignment One: Customizing and Using the Z Shell}
+\MYHEADERS{Laboratory Assignment One}{Due: February 3, 2014}
 
 \section*{Introduction}
 
