Adding more content in the main paragraph for zsh.

--- a/labs/lab1/cs440S2014-lab1.tex
+++ b/labs/lab1/cs440S2014-lab1.tex
@@ -21,51 +21,30 @@ the shell.  There are many operating system shells available for the Unix, Linux
 and fish.  In this laboratory session, you will learn how to configure and use zsh, arguably the most advanced and customizable
 shell for the Linux operating system that is described at \url{http://zsh.sourceforge.net}.
 
-\section*{Configuring the Z Shell}
+\section*{Configuring and Using the Z Shell}
 
 To start using the Z shell, hereafter abbreviated as zsh, you must open a terminal window and type {\tt zsh}.  Try to navigate
 your file system and run a program through zsh.  Do you notice any differences between this new shell and the one that you were
 using previously?  What is the name of the shell that is the default for the Ubuntu operating system? Which do you like better?
 Why?
 
-\section*{Creating a New Repository}
+Zsh can be quickly and easily configured with a community-driven configuration framework called oh-my-zsh.  You can learn more
+about this framework by visiting the following Web site: \url{https://github.com/robbyrussell/oh-my-zsh}. Once you understand the
+basics of oh-my-zsh, please follow instructions on the project's Web site to install it in your home account. After installing
+this framework, does your shell operate in a different way? If yes, then how?
 
-Now that you have learned how to clone an existing Git repository, you and your team members are responsible for
-creating a new repository that contains the source code of a presentation explaining the use of Git. Using screen shots
-and easy-to-understand points (and the presentation system in the cloned repository), your presentation should explain
-how to use the following Git commands. 
+The oh-my-zsh framework supports a wide variety of themes for your shell.  Try out the different themes and pick the one that you
+think is best.  Why did you pick the one that you did? What does it look like? Oh-my-zsh also furnishes a wide variety of plugins.
+As part of this laboratory assignment, you should configure zsh to run the git, web-search, z, and zsh-syntax-highlighting
+plugins.  After modifying the .zshrc file to use each of the aforementioned plugins, you should try them out and write a brief
+commentary on the features that they provide.
 
-\begin{enumerate} 
-			
-	\item {\tt git init}
+Now, you should further customize your Z shell by changing the command prompt so that it includes, at minimum, your username and
+the hostname of the computer you are currently using.  Please note that while some themes may include this information, others may
+not and thus require additional enhancements.  Students can earn extra credit on this assignment if they configure zsh to display
+information about the Git repository that is contained within their current directory; if you are interested in pursuing this
+extra credit, please ask the to see instructor's zsh prompt.
 
-	\item {\tt git status}
-
-	\item {\tt git add} 
-
-	\item {\tt git commit}
-
-	\item {\tt git push}
-
-	\item {\tt git pull} 
-
-	\item One additional {\tt git} command
-
-\end{enumerate}
-
-When you presentation describes a specific Git command, it should explain its input and output with concrete examples.
-Your team is responsible for creating one presentation in a manner that ensures each member can make a substantial
-contribution. You should use a version control repository to coordinate your work on the presentation.  Students who
-would like to learn more about Git can consult Web sites like \url{http://try.github.io/} and
-\url{http://gitimmersion.com/}. 
-
-To create a new Git repository that is hosted on the Bitbucket servers, a member of your team should first create a
-local directory and then initialize it as a local Git repository.  Next, you should use the Bitbucket
-Web site to create a repository that has the same name as the local directory and local repository.  Next, you must
-follow Bitbucket's instructions to push the code and tags in your local repository to the one hosted by Bitbucket's
-servers.  After completing this step, the chosen team member should share the repository with both the course instructor
-and everyone else on the team.  At this point, all members of the team will be able to clone the repository and
-manipulate the files stored inside of it.  Now, you must work together to finish the required presentation!
 
 \section*{Summary of the Required Deliverables}
 
