Finished a first draft of the first page of the lab 1 assignment.

--- a/labs/lab1/cs440S2014-lab1.tex
+++ b/labs/lab1/cs440S2014-lab1.tex
@@ -35,15 +35,20 @@ this framework, does your shell operate in a different way? If yes, then how?
 
 The oh-my-zsh framework supports a wide variety of themes for your shell.  Try out the different themes and pick the one that you
 think is best.  Why did you pick the one that you did? What does it look like? Oh-my-zsh also furnishes a wide variety of plugins.
-As part of this laboratory assignment, you should configure zsh to run the git, web-search, z, and zsh-syntax-highlighting
+As part of this laboratory assignment, you should configure zsh to run the git, web-search, wd, z, and zsh-syntax-highlighting
 plugins.  After modifying the .zshrc file to use each of the aforementioned plugins, you should try them out and write a brief
-commentary on the features that they provide.
+commentary on the features that they provide. You can learn more about these plugins by viewing the {\tt .oh-my-zsh/plugins}
+directory.
 
 Now, you should further customize your Z shell by changing the command prompt so that it includes, at minimum, your username and
 the hostname of the computer you are currently using.  Please note that while some themes may include this information, others may
 not and thus require additional enhancements.  Students can earn extra credit on this assignment if they configure zsh to display
 information about the Git repository that is contained within their current directory; if you are interested in pursuing this
 extra credit, please ask the to see instructor's zsh prompt.
+
+Once your have configured zsh so that it is functional and informative, you should use an additional Linux command to set it as
+your default prompt.  After you have correctly performed this command, all of your terminal windows should always use zsh when you
+open them.  What command did you run to achieve this configuration of the Ubuntu operating system?
 
 
 \section*{Summary of the Required Deliverables}
