Added the first draft of the listing of required deliverables.

--- a/labs/lab1/cs440S2014-lab1.tex
+++ b/labs/lab1/cs440S2014-lab1.tex
@@ -53,18 +53,43 @@ open them.  What command did you run to achieve this configuration of the Ubuntu
 
 \section*{Summary of the Required Deliverables}
 
-This assignment invites your team to submit one printed version of a tutorial that contains:
+This assignment invites you to submit printed and signed versions of the following deliverables 
 
 \begin{enumerate}
 	
-	\item A description of the steps that a user must take to configure Git and Bitbucket
+	\item A description of the key features provided by the Z shell
 
-	\item A description of the inputs, outputs, and behavior of the aforementioned Git commands
+	\item A tutorial that explains how to download, install, and configure oh-my-zsh, including how to:
+
+	  \begin{enumerate}
+
+	    \item Install the oh-my-zsh community-driven framework
+
+	    \item Change the display of the zsh prompt (e.g., show the user name and host name)
+
+	    \item Install, configure, and use the following zsh plugins:
+
+	      \begin{enumerate}
+
+	        \item git
+		  
+		\item web-search
+
+		\item wd 	
+
+		\item z
+
+		\item zsh-syntax-highlighting
+
+	      \end{enumerate}
+
+	    \item Set zsh as the default shell for your Ubuntu workstation
+
+	  \end{enumerate}
+
+	\item A screenshot showing the final configuration of your zsh prompt
 
 \end{enumerate}
 
-You must also ensure that the instructor has read access to your Bitbucket repository that is named according to the
-convention {\tt cs290F2013-lab1-team{\em k}}, with {\tt {\em k}} representing the number of your assigned team. Please
-see the instructor if you would like to print your tutorial slides in color.
 
 \end{document}
