Added a list of the required deliverables and concluding paragraphs.

--- a/labs/lab1/cs440S2014-lab1.tex
+++ b/labs/lab1/cs440S2014-lab1.tex
@@ -91,5 +91,18 @@ This assignment invites you to submit printed and signed versions of the followi
 
 \end{enumerate}
 
+It is recognized that not all of the students in the class may be familiar with the Git version control system and thus have some
+difficulty installing and configuring the git plugin for Zsh.  Students who do not have access to a Git repository should see the
+instructor so that one can be made available to them for the purposes of completing this assignment. However, please note that you
+are not required to extensively use a Git repository to complete this assignment.
+
+In adherence to the honor code, students should complete this assignment on an individual basis. While it is appropriate for
+students in this class to have high-level conversations about the assignment, it is necessary to distinguish carefully between the
+student who discusses the principles underlying a problem with others and the student who produces assignments that are identical
+to, or merely variations on, someone else's work.  While it is acceptable for students in this class to discuss their experiences
+and their final report with their classmates, deliverables that are nearly identical to the work of others will be taken as
+evidence of violating the \mbox{Honor Code}.  
+
+
 
 \end{document}
