--- a/labs/lab1/cs440S2014-lab1.tex
+++ b/labs/lab1/cs440S2014-lab1.tex
@@ -19,7 +19,7 @@
 Computer scientists who use, configure, and implement an operating system (OS) often interact with the OS through the use of
 the shell.  There are many operating system shells available for the Unix, Linux, and Mac OSX operating systems (i.e., sh, tcsh, bash,
 and fish).  In this laboratory session, you will learn how to configure and use zsh, arguably the most advanced and customizable
-shell for the Linux operating system, that is described at \url{http://zsh.sourceforge.net}.
+shell for the Linux operating system; learn more about it by visiting \url{http://zsh.sourceforge.net}.
 
 \section*{Configuring and Using the Z Shell}
 
@@ -34,11 +34,11 @@ basics of oh-my-zsh, please follow the instructions on the project's Web site to
 this framework, does your shell operate in a different way? If yes, then how?
 
 The oh-my-zsh framework supports a wide variety of themes for your shell.  Try out the different themes and pick the one that you
-think is the best.  Why did you pick the one that you did? What does it look like? Oh-my-zsh also furnishes a wide variety of
+think is the best.  Why did you select the one that you did? What does it look like? Oh-my-zsh also furnishes a wide variety of
 plugins.  As part of this laboratory assignment, you should configure zsh to run the git, web-search, wd, z, and
 zsh-syntax-highlighting plugins.  After modifying the .zshrc file to use each of the aforementioned plugins, you should try them
-out and write a brief commentary on the features that they provide. You can learn more about these plugins by viewing the {\tt
-  .oh-my-zsh/plugins} directory.
+out and write a brief commentary on the features that they provide. You can learn more about these plugins by studying the files in
+the {\tt .oh-my-zsh/plugins} directory.
 
 Now, you should further customize your Z shell by changing the command prompt so that it includes, at minimum, your username and
 the hostname of the computer you are currently using.  Please note that while some themes may include this information, others may
@@ -52,11 +52,11 @@ open them.  What command did you run to achieve this configuration of the Ubuntu
 
 \section*{Summary of the Required Deliverables}
 
-This assignment invites you to submit printed and signed versions of the following deliverables 
+This assignment invites you to submit printed and signed versions of the following deliverables: 
 
 \begin{enumerate}
 	
-	\item A description of the key features provided by the Z shell
+	\item Using screenshots and concrete examples, a description of the key features provided by zsh
 
 	\item A commentary on the features that zsh provides that your previous shell did not
 
@@ -95,7 +95,7 @@ This assignment invites you to submit printed and signed versions of the followi
 \end{enumerate}
 
 It is recognized that not all of the students in the class may be familiar with the Git version control system and thus have some
-difficulty installing and configuring the git plugin for Zsh.  Students who do not have access to a Git repository should see the
+difficulty using and configuring the git plugin for Zsh.  Students who do not have access to a Git repository should see the
 instructor so that one can be made available to them for the purposes of completing this assignment. However, please note that you
 are not required to extensively use a Git repository to complete this assignment. Finally, students are strongly encouraged to
 write their laboratory report in \LaTeX.
