Adding the introductory paragraph.

--- a/labs/lab2/cs440S2014-lab2.tex
+++ b/labs/lab2/cs440S2014-lab2.tex
@@ -9,14 +9,12 @@
 \MYHEADERS{Laboratory Assignment Two}{Due: February 10, 2014}
 
 \section*{Introduction}
-
-  % Practicing software engineers normally use a version control system to manage most of the artifacts produced during the
-  % phases of the software development life cycle.  In this course, we will always use the Git distributed version control
-  % system to manage the files associated with our laboratory assignments.  In this laboratory assignment, you will learn
-  % how to use the Bitbucket service for managing Git repositories and the {\tt git} command-line tool in the Ubuntu Linux
-  % operating system.
-
   
+The file system is one of the most heavily used components of an operating system.  Figure~1-14 in your textbook shows a
+visualization of a file system that starts at the root directory and branches out to individual files.  The Java programming
+language --- and many other languages as well --- provide libraries that support the traversal of a file system and the analysis
+of files. In this laboratory assignment, you will implement your own file system traversal tool and use it to learn more about
+characteristics of the file system used by the Linux operating system.
 
 \section*{File System Traverasl}
 
